select resolution and window mode in settings, saved to json settings, and loaded on game start

--- a/game_settings.json
+++ b/game_settings.json
@@ -1,5 +1,9 @@
 {
     "graphics_settings": {
-        "window_mode": "WINDOWED"
+        "window_mode": "WINDOWED",
+        "resolution": [
+            800,
+            600
+        ]
     }
 }
