--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pefile==2023.2.7
 pygame==2.6.1
 pygame-ce==2.5.3
 pygame-gui==0.6.8
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
 python-i18n==0.3.9
 pywin32-ctypes==0.2.3
 six==1.17.0
