added a setting for the size of the textures

--- a/settings/game_settings.json
+++ b/settings/game_settings.json
@@ -5,5 +5,11 @@
             800,
             600
         ]
+    },
+    "game_settings": {
+        "texture_size": {
+          "height": 32,
+          "width": 32
+        }
     }
 }
